Ver1.2 ComicViewerからの引継ぎ

--- a/ComicViewerAlpha/ComicViewerAlpha/ComicViewerAlpha.csproj
+++ b/ComicViewerAlpha/ComicViewerAlpha/ComicViewerAlpha.csproj
@@ -36,7 +36,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
+    <Compile Include="Config.cs" />
+    <Compile Include="EpisodePage.cs" />
+    <Compile Include="MainMenu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SelectFileBlockView.cs" />
+    <Compile Include="SelectFileListView.cs" />
+    <Compile Include="ver.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
