--- a/ComicViewerAlpha/ComicViewerAlpha.Droid/ComicViewerAlpha.Droid.csproj
+++ b/ComicViewerAlpha/ComicViewerAlpha.Droid/ComicViewerAlpha.Droid.csproj
@@ -120,9 +120,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="..\..\..\..\..\..\..\Desktop\KST.JPG">
-      <Link>Resources\drawable\KST.JPG</Link>
-    </AndroidResource>
+    <AndroidResource Include="Resources\drawable\KST.JPG" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.2.0.0.6482\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.2.0.0.6482\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
