--- a/ComicViewerAlpha/ComicViewerAlpha/ComicViewerAlpha.csproj
+++ b/ComicViewerAlpha/ComicViewerAlpha/ComicViewerAlpha.csproj
@@ -40,7 +40,6 @@
     <Compile Include="EpisodePage.cs" />
     <Compile Include="MainMenu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SelectFileBlockView.cs" />
     <Compile Include="SelectFileListView.cs" />
     <Compile Include="ver.cs" />
   </ItemGroup>
@@ -66,7 +65,28 @@
     <EmbeddedResource Include="Image\SelectFileBoxView\test.png" />
     <EmbeddedResource Include="Image\SelectFileListView\ListView.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="EpisodeImage\prolouge\page1.png" />
+    <EmbeddedResource Include="EpisodeImage\prolouge\page2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="EpisodeImage\prolouge\page3.png" />
+    <EmbeddedResource Include="EpisodeImage\prolouge\page4.png" />
+    <EmbeddedResource Include="EpisodeImage\prolouge\page5.png" />
+    <EmbeddedResource Include="EpisodeImage\prolouge\page6.png" />
+    <EmbeddedResource Include="EpisodeImage\prolouge\page7.png" />
+    <EmbeddedResource Include="EpisodeImage\prolouge\page8.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="EpisodeImage\design\page1.png" />
+    <EmbeddedResource Include="EpisodeImage\design\page2.png" />
+    <EmbeddedResource Include="EpisodeImage\design\page3.png" />
+    <EmbeddedResource Include="EpisodeImage\design\page4.png" />
+    <EmbeddedResource Include="EpisodeImage\design\page5.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="EpisodeImage\Episode1\andmore.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.2.0.0.6482\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.2.0.0.6482\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
